[Setup] Merge fix